--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         
         <footer>
-            <p>RnLamsuly开发的音游赛事积分系统 &copy; 2023 | 数据更新时间: <span id="lastUpdated">-</span></p>
+            <p>RnLamsuly &copy; 2025 | 数据更新时间: <span>2025-11-23</span></p>
         </footer>
     </div>
 
