--- a/index.html
+++ b/index.html
@@ -50,20 +50,32 @@
                 
                 <div class="card">
                     <h2>🔔 本站公告</h2>
+                    
                     <div>
-                        <div>
-                            <p>本站已于2025-11-23上线。</p>
-                            <br>
-                            <p>选手可自行组织私人赛，也可以在RnLamsuly的监督下进行积分赛。</p>
-                            <br>
-                            <p>-<b>私人赛</b>：大家自行拼歌，将结果排名汇报给RnLamsuly然后根据排名计算分值变动。私人赛的选手积分之和不会改变。</p>
-                            <br>
-                            <p>-<b>积分赛</b>：每名玩家每周最多记录两场积分赛。积分赛需要RnLamsuly的监督，在私人赛的基础上有额外积分奖励（即活跃度奖励，假期会有所提升）。</p>
-                            <br>
-                            <p>若长时间没有比赛记录，每30天会降低一定分数。</p>
-                            <br>
-                            <p>本站为静态网页，数据均由RnLamsuly手动修改。玩得开心！</p>
-                        </div>
+                        <div style="color: var(--gray); font-size: 0.8rem;">2025-11-23</div>
+                        <p><b>K因子</b>是分数变化幅度的指标，K因子越大的比赛，胜者获得的分数更多</p>
+                        <br>
+                        <p><b>活跃度奖励</b>是积分赛的参与奖励，每名参与者都能获得的积分</p>
+                        <br>
+                        <p>系统信息中给出的K因子和活跃度奖励是玩家自行发起的私人赛与积分赛的积分标准。</p>
+                        <br>
+                        <p>RnLamsuly可能会组织一些K因子更高的官方比赛。</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <div style="color: var(--gray); font-size: 0.8rem;">2025-11-23</div>
+                        <p>本站已于2025-11-23上线。</p>
+                        <br>
+                        <p>选手可自行组织私人赛，也可以在RnLamsuly的监督下进行积分赛。</p>
+                        <br>
+                        <p>-<b>私人赛</b>：大家自行拼歌，将结果排名汇报给RnLamsuly然后根据排名计算分值变动。私人赛的选手积分之和不会改变。</p>
+                        <br>
+                        <p>-<b>积分赛</b>：每名玩家每周最多记录两场积分赛。积分赛需要RnLamsuly的监督，在私人赛的基础上有额外积分奖励（即活跃度奖励，假期会有所提升）。</p>
+                        <br>
+                        <p>若长时间没有比赛记录，每30天会降低一定分数。</p>
+                        <br>
+                        <p>本站为静态网页，数据均由RnLamsuly手动修改。玩得开心！</p>
                     </div>
                 </div>
             </div>
