--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <h1>Rnythm Index</h1>
-            <p class="subtitle">RnLamsuly节奏指数 - 基于ELO算法的动态积分排名 · 静态网页 · 实时更新</p>
+            <p class="subtitle">RnLamsuly节奏指数 - 基于<a class="subtitle" href="https://baike.baidu.com/item/%E5%9F%83%E6%B4%9B%E7%AD%89%E7%BA%A7%E5%88%86%E7%B3%BB%E7%BB%9F/2359694">ELO算法</a>的动态积分排名 · 静态网页 · 实时更新</p>
         </div>
     </header>
     
@@ -82,7 +82,7 @@
         </div>
         
         <footer>
-            <p>RnLamsuly &copy; 2025 | 数据更新时间: <span>2025-11-23</span></p>
+            <p>RnLamsuly &copy; 2025 | 数据更新时间: <span>2025-11-23</span> | 我们的QQ群：1034423269</p>
         </footer>
     </div>
 
