--- a/index.html
+++ b/index.html
@@ -49,7 +49,29 @@
                 </div>
                 
                 <div class="card">
+                    <h2>🔧 实用工具</h2>
+                    <div style="text-align: center; padding: 1.5rem 0;">
+                        <div style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--accent);">
+                            积分计算器
+                        </div>
+                        <p style="color: var(--gray); margin-bottom: 1.5rem; font-size: 0.9rem;">
+                            快速计算比赛后的分数变化
+                        </p>
+                        <a href="calc.html" class="btn" style="display: inline-flex; align-items: center; gap: 0.5rem;">
+                            <span>🚀 打开计算器</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="card">
                     <h2>🔔 本站公告</h2>
+                    <div>
+                        <div style="color: var(--gray); font-size: 0.8rem;">2025-11-23</div>
+                        <p>由于自行拼歌频率过高，此后“最近比赛”栏目不再公式自行拼歌的结果，自行拼歌也不计入用户参与比赛场数的相关统计</p>
+                    </div>
+                </div>
+
+                <div class="card">
                     
                     <div>
                         <div style="color: var(--gray); font-size: 0.8rem;">2025-11-23</div>
@@ -62,6 +84,7 @@
                         <p>RnLamsuly可能会组织一些K因子更高的官方比赛。</p>
                     </div>
                 </div>
+
                 <div class="card">
                     <div>
                         <div style="color: var(--gray); font-size: 0.8rem;">2025-11-23</div>
